Move jQuery to bottom to prevent blocking.

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="/img/icon.png">
     <link rel="stylesheet" href="/css/styles.min.css">
   </head>
-  <body class="404">
+  <body class="error">
     <header>
       <div id="header-container">
         <hgroup id="header-titles">
