--- a/404.html
+++ b/404.html
@@ -10,15 +10,13 @@
   </head>
   <body class="error">
     <header>
-      <div id="header-container">
-        <hgroup id="header-titles">
+      <div id="header__container">
+        <hgroup id="header__titles">
           <h1>Uh oh!</h1>
           <h2>Looks like you made a wrong turn.</h2>
         </hgroup>
-        <section id="header-social">
-          <a href="javascript:history.back()" title="Go back to the previous page">
-            Back
-          </a>
+        <section id="header__social">
+          <a href="javascript:history.back()" title="Go back to the previous page">Back</a>
         </section>
       </div>
     </header>
