--- a/404.html
+++ b/404.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="/css/styles.min.css">
   </head>
   <body class="error">
-    <header>
+    <header id="header">
       <div id="header__container">
         <hgroup id="header__titles">
           <h1>Uh oh!</h1>
           <h2>Looks like you made a wrong turn.</h2>
         </hgroup>
         <section id="header__social">
-          <a href="javascript:history.back()" title="Go back to the previous page">Back</a>
+          <a class="header__social__link" href="javascript:history.back()" title="Go back to the previous page">Back</a>
         </section>
       </div>
     </header>
