--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
   <body class="error">
     <header id="header">
       <div id="header__container">
-        <hgroup id="header__titles">
+        <hgroup id="header__container__titles">
           <h1>Uh oh!</h1>
           <h2>Looks like you made a wrong turn.</h2>
         </hgroup>
