--- a/404.html
+++ b/404.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Eugene Cheung | Developer + Designer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="icon" type="image/png" href="/img/icon.png">
-    <link rel="stylesheet" href="/css/styles.min.css">
-  </head>
+
+  {% include head.html %}
+
   <body class="error">
     <header id="header">
       <div id="header__container">
