Update link to Jon&Nick website

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ layout: home
         <p>Chrome app design + development</p>
       </span>
     </a>
-    <a class="portfolio__shot" href="http://jonandnick.com/">
+    <a class="portfolio__shot" href="http://echeung.me/jonandnick/">
       <img src="img/portfolio/jonnick.jpg" alt="Jon &amp; Nick">
       <span>
         <p>Vote for Jon &amp; Nick</p>
