Add Sherlocke and MarkUs.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,21 @@ layout: home
 <section id="portfolio">
   <h3>Some things I've made</h3>
   <div class="container">
-    <a class="portfolio__shot" href="http://cssu.cdf.toronto.edu/">
+    <a class="portfolio__shot" href="https://sherlocke.me/">
+      <img src="img/portfolio/sherlocke.jpg" alt="Sherlocke">
+      <span>
+        <p>Sherlocke</p>
+        <p>Website design + development</p>
+      </span>
+    </a>
+    <a class="portfolio__shot" href="http://markusproject.org/">
+      <img src="img/portfolio/markus.jpg" alt="The MarkUs Project">
+      <span>
+        <p>MarkUs</p>
+        <p>Rebranding + web design/dev</p>
+      </span>
+    </a>
+    <a class="portfolio__shot" href="http://cssu.ca/">
       <img src="img/portfolio/cssu.jpg" alt="University of Toronto Computer Science Student Union">
       <span>
         <p>CSSU</p>
