Sherlocke description edit

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: home
       <img src="img/portfolio/sherlocke.jpg" alt="Sherlocke">
       <span>
         <p>Sherlocke</p>
-        <p>Website design + development</p>
+        <p>Design + development</p>
       </span>
     </a>
     <a class="portfolio__shot" href="http://markusproject.org/">
