--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ layout: home
 
 <header id="header">
   <div id="header__container">
-    <hgroup id="header__container__titles">
+    <div id="header__container__titles">
       <h1>Eugene Cheung</h1>
       <h2>Developer + Designer</h2>
-    </hgroup>
+    </div>
     <section id="header__social">
       <a class="header__social__link" href="https://www.twitter.com/arkon" title="@arkon on Twitter">
         Twitter
@@ -37,82 +37,14 @@ layout: home
 <section id="portfolio">
   <h3>Some things I've made</h3>
   <div class="container">
-    <a class="portfolio__shot" href="https://sherlocke.me/">
-      <img src="img/portfolio/sherlocke.jpg" alt="Sherlocke">
-      <span>
-        <p>Sherlocke</p>
-        <p>Design + development</p>
-      </span>
-    </a>
-    <a class="portfolio__shot" href="http://markusproject.org/">
-      <img src="img/portfolio/markus.jpg" alt="The MarkUs Project">
-      <span>
-        <p>MarkUs</p>
-        <p>Rebranding + web design/dev</p>
-      </span>
-    </a>
-    <a class="portfolio__shot" href="http://cssu.ca/">
-      <img src="img/portfolio/cssu.jpg" alt="University of Toronto Computer Science Student Union">
-      <span>
-        <p>CSSU</p>
-        <p>Rebranding + web design/dev</p>
-      </span>
-    </a>
-    <a class="portfolio__shot" href="https://play.google.com/store/apps/details?id=me.echeung.cdflabs">
-      <img src="img/portfolio/cdf.jpg" alt="CDF Labs Android app">
-      <span>
-        <p>CDF Labs</p>
-        <p>Android app development</p>
-      </span>
-    </a>
-    <a class="portfolio__shot" href="http://txti.unhaltable.com/">
-      <img src="img/portfolio/txti.jpg" alt="txti">
-      <span>
-        <p>txti</p>
-        <p>Website design + development</p>
-      </span>
-    </a>
-    <a class="portfolio__shot" href="http://ultraviolet.unhaltable.com/">
-      <img src="img/portfolio/uv.jpg" alt="Ultraviolet">
-      <span>
-        <p>Ultraviolet</p>
-        <p>Chrome app design + development</p>
-      </span>
-    </a>
-    <a class="portfolio__shot" href="http://cryptr.unhaltable.com/">
-      <img src="img/portfolio/cryptr.jpg" alt="Cryptr">
-      <span>
-        <p>Cryptr</p>
-        <p>Chrome app design + development</p>
-      </span>
-    </a>
-    <a class="portfolio__shot" href="http://echeung.me/jonandnick/">
-      <img src="img/portfolio/jonnick.jpg" alt="Jon &amp; Nick">
-      <span>
-        <p>Vote for Jon &amp; Nick</p>
-        <p>Website design + development</p>
-      </span>
-    </a>
-    <a class="portfolio__shot" href="https://chrome.google.com/webstore/detail/retwit-for-twitter/bkpjdbhepoejcinkccodijdpoifkfbnl">
-      <img src="img/portfolio/retwit.jpg" alt="ReTwit for Twitter">
-      <span>
-        <p>ReTwit for Twitter</p>
-        <p>Chrome extension design + development</p>
-      </span>
-    </a>
-    <a class="portfolio__shot" href="http://www.thinqtek.com/leanback/">
-      <img src="img/portfolio/leanback.jpg" alt="Leanback">
-      <span>
-        <p>Leanback TV</p>
-        <p>Chrome app design</p>
-      </span>
-    </a>
-    <a class="portfolio__shot" href="http://www.therightminecraft.com/">
-      <img src="img/portfolio/mc.jpg" alt="The Right Minecraft Forums">
-      <span>
-        <p>The Right Minecraft</p>
-        <p>Web forum design + development</p>
-      </span>
-    </a>
+    {% for entry in site.data.portfolio %}
+      <a class="portfolio__shot" href="{{ entry.url }}">
+        <img src="{{ 'portfolio/' | append: entry.pic | append: '.jpg' | asset_path }}" alt="{{ entry.title }}">
+        <span>
+          <p>{{ entry.short_title }}</p>
+          <p>{{ entry.description }}</p>
+        </span>
+      </a>
+    {% endfor %}
   </div>
 </section>
