--- a/404.html
+++ b/404.html
@@ -15,11 +15,18 @@
 <body>
     <h1>404</h1><h3>Whoops. Looks like what you're looking for can't be found.</h3>
 
-    <footer class="footer">
+    <footer class="footer" id="footer-contact">
         <div class="container">
             <a class="btn-pill" href="mailto:ey.cheung@outlook.com">Email me</a>
-            <p class="footer__fin">Made in Canada</p>
+
+            <div class="footer__social">
+                <a href="https://www.linkedin.com/in/arkon94">LinkedIn</a>
+                <a href="https://github.com/arkon">GitHub</a>
+                <a href="http://www.dribbble.com/arkon">Dribbble</a>
+            </div>
         </div>
     </footer>
+
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
