Update content styles

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     </div>
 
     <p class="header__bgtext">Developer + Designer</p>
-    <!-- <a class="header__more" href="#home-content" title="Learn more">↓</a> -->
 </header>
 
 <section class="content">
@@ -46,32 +45,74 @@
             <div class="portfolio">
                 <div class="portfolio__item">
                     <div class="portfolio__item--image"></div>
-                    <p class="portfolio__item--title">Title</p>
+                    <div class="portfolio__item--description">
+                        <h3 class="portfolio__item--title">Title</h3>
+                        <div class="portfolio__item--tags">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                        </div>
+                        <p>Description</p>
+                    </div>
                 </div>
 
                 <div class="portfolio__item">
                     <div class="portfolio__item--image"></div>
-                    <p class="portfolio__item--title">Title</p>
+                    <div class="portfolio__item--description">
+                        <h3 class="portfolio__item--title">Title</h3>
+                        <div class="portfolio__item--tags">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                        </div>
+                        <p>Description</p>
+                    </div>
                 </div>
 
                 <div class="portfolio__item">
                     <div class="portfolio__item--image"></div>
-                    <p class="portfolio__item--title">Title</p>
+                    <div class="portfolio__item--description">
+                        <h3 class="portfolio__item--title">Title</h3>
+                        <div class="portfolio__item--tags">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                        </div>
+                        <p>Description</p>
+                    </div>
                 </div>
 
                 <div class="portfolio__item">
                     <div class="portfolio__item--image"></div>
-                    <p class="portfolio__item--title">Title</p>
+                    <div class="portfolio__item--description">
+                        <h3 class="portfolio__item--title">Title</h3>
+                        <div class="portfolio__item--tags">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                        </div>
+                        <p>Description</p>
+                    </div>
                 </div>
 
                 <div class="portfolio__item">
                     <div class="portfolio__item--image"></div>
-                    <p class="portfolio__item--title">Title</p>
+                    <div class="portfolio__item--description">
+                        <h3 class="portfolio__item--title">Title</h3>
+                        <div class="portfolio__item--tags">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                        </div>
+                        <p>Description</p>
+                    </div>
                 </div>
 
                 <div class="portfolio__item">
                     <div class="portfolio__item--image"></div>
-                    <p class="portfolio__item--title">Title</p>
+                    <div class="portfolio__item--description">
+                        <h3 class="portfolio__item--title">Title</h3>
+                        <div class="portfolio__item--tags">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                        </div>
+                        <p>Description</p>
+                    </div>
                 </div>
             </div>
         </section>
