--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p class="header__bgtext">Developer + Designer</p>
 </header>
 
-<section class="content">
+<main class="content">
     <div class="container">
         <section class="home-content__about" id="home-about">
             <h1>Hi, I like creating things.</h1>
@@ -251,7 +251,7 @@
             </div>
         </section>
     </div>
-</section>
+</main>
 
     <footer class="footer" id="footer-contact">
         <div class="container">
