--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <title>Eugene Cheung</title>
 
-<link href='http://fonts.googleapis.com/css?family=Dosis:300' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Dosis:300' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="/css/main.css">
 <link rel="icon" type="image/png" href="/images/icon.png">
 
