--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
+<meta name="viewport" content="initial-scale=1.0, width=device-width">
 
 <title>Eugene Cheung</title>
 
-<link href='https://fonts.googleapis.com/css?family=Dosis:300' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="/css/main.css">
-<link rel="icon" type="image/png" href="/images/icon.png">
+<link href="http://fonts.googleapis.com/css?family=Dosis:300" rel="stylesheet">
+<link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+<link href="/css/main.css" rel="stylesheet">
+<link href="/images/icon.png" rel="icon" type="image/png">
 
 </head>
 <body>
@@ -36,7 +36,7 @@
         <section class="home-content__about" id="home-about">
             <h1>Hi, I like creating things.</h1>
 
-            <p>I’m a student at University of Toronto St. George studying to get a BSc. with a specialization in Computer Science. I began teaching myself about design and programming at the age of 12, and I've loved crafting beautiful creations ever since.</p>
+            <p>I’m currently an SDE at <a href="https://www.amazon.com/">Amazon</a>. I got my B.Sc with a specialization in Computer Science at <a href="https://www.utoronto.ca/">University of Toronto St. George</a>. I began teaching myself about design and programming at the age of 12, and I've loved crafting beautiful creations ever since.</p>
         </section>
 
         <section class="home-content__gallery" id="home-work">
@@ -153,7 +153,7 @@
             <a class="btn-pill" href="mailto:ey.cheung@outlook.com">Email me</a>
 
             <div class="footer__social">
-                <a href="https://www.linkedin.com/in/echeung94">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/arkon94">LinkedIn</a>
                 <a href="https://github.com/arkon">GitHub</a>
                 <a href="http://www.dribbble.com/arkon">Dribbble</a>
             </div>
