--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <title>Eugene Cheung</title>
 
-<link href="http://fonts.googleapis.com/css?family=Dosis:300" rel="stylesheet">
-<link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Dosis:300" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 <link href="/css/main.css" rel="stylesheet">
 <link href="/images/icon.png" rel="icon" type="image/png">
 
